fix - the right width of current date on mobile version

--- a/modules/tools/gfi/themes/trafficCount/style.less
+++ b/modules/tools/gfi/themes/trafficCount/style.less
@@ -103,5 +103,14 @@
                 }
             }
         }
+        .tab-bottom {
+            &:not(.infos) {
+                .table-striped {
+                    min-width: inherit;
+                    width: inherit;
+                    max-width: calc(100% - 20px);
+                }
+            }
+        }
     }
 }
